# crispy-telegram

./: .clang-format  CMakeLists.txt  README.md  build.bat  vcpkg.json
assets/shaders/: particle.fs  particle.vs  sprite.fs  sprite.vs
src/: ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  particle_generator.cpp  particle_generator.h  program.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  stb_image.h  texture.cpp  texture.h
